--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # Supabase Configuration
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# OpenAI Configuration (for ChatGPT integration)
+OPENAI_API_KEY=your_openai_api_key
+
+# App Configuration
+NUXT_SECRET_KEY=your_secret_key_for_sessions
