--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "@supabase/supabase-js": "^2.57.2",
     "@vueuse/nuxt": "^13.9.0",
     "nuxt": "^4.1.0",
+    "openai": "^5.19.1",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   }
